# cpp-DDS

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  INCIDENT-RESPONSE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
cli/: CMakeLists.txt  main.cpp
include/dds/: channel.hpp  dds.hpp  relay.hpp
include/dds/mock/: participant.hpp
requirements/: requirements.json
src/: dds.cpp  relay.cpp
src/mock/: participant.cpp
tests/: CMakeLists.txt  test_dds.cpp  test_mock.cpp  test_relay.cpp
